--- a/index.html
+++ b/index.html
@@ -27,6 +27,12 @@
   <link rel="stylesheet" href="./assets/css/theme.css">
 <script src="https://static.elfsight.com/platform/platform.js" data-use-service-core defer></script>
 <div class="elfsight-app-aa57fa0c-f6ff-4adc-a4e4-bc18ff17d420" data-elfsight-app-lazy></div>
+
+<style>
+  h1 {
+    font-size: 2px;
+  }
+</style>
 </head>
 <body>
 
@@ -108,7 +114,7 @@
             <img src="./assets/img/bg_image_1.jpg" alt="">
             <div class="img-caption">
               <div class="subhead">We are dedicated to becoming a trusted partner</div>
-              <h1 class="mb-4">At LUTCH, we recognize the Intrinsic link between individual growth and organizational progress.</h1>
+              <h1 class="mb-4">LUTCH recognizes the link between individual growth and organizational progress.</h1>
               <!-- <a href="./html/contact.html" class="btn btn-outline-light">Contact</a> -->
             </div>
           </div>
