--- a/index.html
+++ b/index.html
@@ -45,6 +45,12 @@
             color: white;
         }
     </style>
+    <style>
+        .logo-img {
+            max-height: 70px;
+            /* Adjust the value to your desired size */
+        }
+    </style>
 </head>
 
 <div>
@@ -66,7 +72,7 @@
                         <p class="m-0"><i class="fa fa-envelope-open me-2"></i>lutchhrconsultant@gmail.com</p>
                     </div>
                     <div class="py-2">
-                        <p class="m-0"><i class="fa fa-phone-alt me-2"></i>+260 763 299 397</p>
+                        <p class="m-0"><i class="fa fa-phone-alt me-2"></i>+260 768 406 650</p>
                     </div>
                 </div>
             </div>
@@ -76,33 +82,33 @@
 
 
     <!-- Navbar Start -->
-    <nav class="navbar navbar-expand-lg bg-white navbar-light shadow-sm px-5 py-3 py-lg-0">
-        <a href="index.html" class="navbar-brand p-0">
-            <h1 class="my-heading" class="m-0 text-uppercase text-primary">LTC</h1>
-        </a>
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse">
-            <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarCollapse">
-            <div class="navbar-nav ms-auto py-0 me-n3">
-                <a href="index.html" class="nav-item nav-link active">Home</a>
-                <a href="#about1" class="nav-item nav-link">About</a>
-                <a href="#service1" class="nav-item nav-link">Service</a>
-                <div class="nav-item dropdown">
-                    <!-- <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">Pages</a> -->
-                    <div class="dropdown-menu m-0">
-                        <a href="blog.html" class="dropdown-item">Blog Grid</a>
-                        <a href="detail.html" class="dropdown-item">Blog Detail</a>
-                        <a href="feature.html" class="dropdown-item">Features</a>
-                        <a href="quote.html" class="dropdown-item">Quote Form</a>
-                        <a href="team.html" class="dropdown-item">The Team</a>
-                        <a href="testimonial.html" class="dropdown-item">Testimonial</a>
-                    </div>
+<nav class="navbar navbar-expand-lg bg-white navbar-light shadow-sm px-5 py-3 py-lg-0">
+    <a href="index.html" class="navbar-brand p-0">
+        <img src="img/logo.png" alt="Logo" class="logo-img">
+    </a>
+    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse">
+        <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarCollapse">
+        <div class="navbar-nav ms-auto py-0 me-n3">
+            <a href="index.html" class="nav-item nav-link active">Home</a>
+            <a href="#about1" class="nav-item nav-link">About</a>
+            <a href="#service1" class="nav-item nav-link">Service</a>
+            <div class="nav-item dropdown">
+                <!-- <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">Pages</a> -->
+                <div class="dropdown-menu m-0">
+                    <a href="blog.html" class="dropdown-item">Blog Grid</a>
+                    <a href="detail.html" class="dropdown-item">Blog Detail</a>
+                    <a href="feature.html" class="dropdown-item">Features</a>
+                    <a href="quote.html" class="dropdown-item">Quote Form</a>
+                    <a href="team.html" class="dropdown-item">The Team</a>
+                    <a href="testimonial.html" class="dropdown-item">Testimonial</a>
                 </div>
-                <a href="#quote1" class="nav-item nav-link">Contact</a>
             </div>
+            <a href="#quote1" class="nav-item nav-link">Contact</a>
         </div>
-    </nav>
+    </div>
+</nav>
     <!-- Navbar End -->
 
 
@@ -115,7 +121,7 @@
                     <div class="carousel-caption d-flex flex-column align-items-center justify-content-center">
                         <div class="p-3" style="max-width: 900px;">
                             <h5 class="text-white text-uppercase">We are dedicated to becoming a trusted partner</h5>
-                            <h1 class="top-up"  class="display-1 text-white mb-md-4">LUTCH recognizes the link between individual growth and organizational progress.</h1>
+                            <h1 class="top-up"  class="display-1 text-white mb-md-4">LUTCH Recognizes the link between individual growth and Organizational progress.</h1>
                             <a href="#quote1" class="btn btn-primary py-md-3 px-md-5 me-3 rounded-pill">Get Quote</a>
                             <a href="#about1" class="btn btn-secondary py-md-3 px-md-5 rounded-pill">About Us</a>
                         </div>
@@ -153,8 +159,8 @@
     <div id="about1" class="container-fluid bg-secondary p-0">
         <div class="row g-0">
             <div class="col-lg-6 py-6 px-5">
-                <h1 class="display-5 mb-4">Welcome to <span class="text-primary">LUTCH</span></h1>
-                <h4 class="text-primary mb-4">Founded in 2019, LUTCH is dedicated Human Resource consulting firm with a mission to empower businesses to reach their full potential.</h4>
+                <h1 class="display-5 mb-4">Welcome to <span class="text-primary">LUTCH Human Resource Consultant Firm.</span></h1>
+                <h4 class="text-primary mb-4">Founded in 2019, LUTCH is a dedicated Human Resource consulting firm with a mission to empower businesses to reach their full potential.</h4>
                 <p class="mb-4">Our unwavering commitment is to provide tailored solutions that drive organizational success.<br> At LUTCH, we firmly
                 believe that a strong, efficient, and skilled Human Resource team is the cornerstone of
                 organizational growth and achievement.</p>
@@ -581,9 +587,9 @@
             </div>
             <div class="col-lg-3 col-md-6">
                 <h3 class="text-white mb-4">Get In Touch</h3>
-                <p class="mb-2"><i class="bi bi-geo-alt text-primary me-2"></i>NDOLA, ZAMBIA</p>
+                <p class="mb-2"><i class="bi bi-geo-alt text-primary me-2"></i>Corner of Kabelenga and Chinika Road, Ndola.</p>
                 <p class="mb-2"><i class="bi bi-envelope-open text-primary me-2"></i>lutchhrconsultant@gmail.com</p>
-                <p class="mb-0"><i class="bi bi-telephone text-primary me-2"></i>+260 763299397</p>
+                <p class="mb-0"><i class="bi bi-telephone text-primary me-2"></i>+260 768 406 650</p>
             </div>
             <div class="col-lg-3 col-md-6">
                 <h3 class="text-white mb-4">Follow Us</h3>
